[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

[project]
authors = [{name = "Trevor Bača", email = "trevor.baca@gmail.com"}]
dependencies = [
    "abjad>=3.21",
    "sphinx-toggleprompt>=0.6.0"
]
description = "Trevor Bača's Abjad library."
keywords = ["abjad", "lilypond", "music composition", "music notation"]
license = { text = "MIT" }
name = "baca"
readme = "README.md"
requires-python = ">=3.12"
version = "3.21"

[project.urls]
Homepage = "https://github.com/trevorbaca/baca"

[tool.setuptools]
packages = ["baca"]
package-dir = { "" = "source" }
