[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

[project]
authors = [{name = "Trevor Bača", email = "trevor.baca@gmail.com"}]
dependencies = [
    "abjad>=3.23",
]
description = "Trevor Bača's Abjad library."
keywords = ["abjad", "lilypond", "music composition", "music notation"]
license = { text = "MIT" }
name = "baca"
readme = "README.md"
requires-python = ">=3.12"
version = "3.23"

[project.urls]
Homepage = "https://github.com/trevorbaca/baca"

[tool.pytest.ini_options]
addopts = "--doctest-modules"
doctest_optionflags = "ELLIPSIS NORMALIZE_WHITESPACE"
testpaths = ["source", "tests"]

[tool.setuptools]
include-package-data = true
packages = ["baca"]
package-dir = { "" = "source" }

[tool.setuptools.package-data]
"*" = ["README.md", "conftest.py"]
"abjad" = ["**/*"]

[tool.setuptools.exclude-package-data]
"*" = ["docs/*"]
